--- a/cron/templates/cron-deployment.yaml
+++ b/cron/templates/cron-deployment.yaml
@@ -9,12 +9,12 @@ spec:
     metadata:
       labels:
         app: cron-chart
-        image: master_cfc_8500_admin_lcn-cron_latest
+        image: master_cfc_8500_admin_cron_latest
     spec:
       hostNetwork: false
       containers:
       - name: cron-chart
-        image: master.cfc:8500/admin/lcn-cron:latest
+        image: master.cfc:8500/admin/cron:latest
         imagePullPolicy: Always
         ports:
         - protocol: TCP
